fix_mapper